# CItysewa-noORM-

./: .env.example  .gitignore  README.md  db_manager.py  manage.py  schema.py  schema.sql
Backend/: .env.example  README.md  pyproject.toml  render.yaml  requirements.txt  schema.sql
Backend/config/: settings.py  urls.py
Backend/src/accounts/: constants.py  messages.py  serializers.py  tables.py  urls.py  validators.py  views.py
Backend/src/core/: db_manager.py  schema.py
Backend/src/templates/: index.html
Backend/src/utils/: file.txt  storage.py
Frontend/: .env  index.html  package-lock.json  package.json
Frontend/src/: App.jsx  main.jsx
Frontend/src/Style/: Dashboard.css  Footer.css  Home.css  Login.css  Navbar.css  Profiles.css  Register.css  Root.css  Services.css  Sidebar.css
Frontend/src/api/: client.js
Frontend/src/hooks/: useAuth.jsx  useFetchBookings.js
Frontend/src/layouts/: AdminLayout.jsx  BaseLayout.jsx  CustomerLayout.jsx  ProviderLayout.jsx  PublicLayout.jsx
Frontend/src/pages/: About.jsx  Home.jsx
Frontend/src/routes/: AppRoutes.jsx  ProtectedRoute.jsx
Frontend/src/utils/: formatDate.js
citysewa_provider/: pubspec.yaml
citysewa_provider/ios/Runner.xcodeproj/: project.pbxproj
citysewa_provider/lib/: main.dart  session_manager.dart
citysewa_provider/lib/api/: api.dart  (+1 more)
citysewa_provider/test/: widget_test.dart
config/: settings.py  urls.py
src/accounts/: constants.py  serializers.py  tables.py  urls.py  views.py
src/api/: urls.py
src/core/: authentication.py  db_manager.py  schema.py
src/templates/: index.html
(+40 files in other folders)
